--- a/webApiPractica/appsettings.json
+++ b/webApiPractica/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "¨equipoDbConnection¨": "Data Source = LOCALHOST;Initial catalog=Equipos;User Id=  ;Password= ;Connect Timeout =120; Encrypt=False"
+    "equipoDbConnection": "Data Source = LOCALHOST;Initial catalog=equipos;User Id=josue ;Password=123456 ;Connect Timeout =120; Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
